# lolday

./: .codecov.yml  .editorconfig  .gitignore  .gitleaks.toml  .lolday-cf-svctoken.env.example  .lolday-secrets.env.example  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  ruff.toml
backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4_add_phase4_tables.py  c13efbf4_add_build_token_and_pending_schema.py  f5c431c00187_add_detector_tables.py
backend/app/: config.py  db.py  deps.py  internal_app.py  main.py  metrics.py  reconciler.py  users.py
backend/app/auth/: cf_access.py
backend/app/middleware/: body_size.py  csrf.py
backend/app/models/: __init__.py  audit.py  credential.py  dataset.py  detector.py  job.py  job_event.py  model_registry.py  user.py
backend/app/reconciler/: __init__.py  build_finalize.py  builds.py  fifo_scheduler.py  harbor_rotate.py  jobs.py  log_capture.py  loop.py  model_sync.py  notify.py  orphans.py  projections.py
backend/app/routers/: admin.py  builds.py  cluster.py  credentials.py  datasets.py  detectors.py  dev_seed.py  experiments_proxy.py  internal.py  jobs.py  mlflow_authz.py  models_registry.py  users_me.py
backend/app/schemas/: __init__.py  credential.py  dataset.py  detector.py  dev_seed.py  errors.py  job.py  job_event.py  model_registry.py  user.py
backend/app/scripts/: rotate_fernet.py
backend/app/services/: _stubs.py  audit.py  build.py  cluster_status.py  crypto.py  dataset.py  discord.py  events_tail.py  git.py  gpu_signal.py  harbor.py  harbor_init.py  http_headers.py  job_config.py  job_dispatch.py  job_spec.py  job_submission.py  job_tokens.py  job_validation.py  jobs_dispatch.py  jobs_params_guard.py  jobs_params_validate.py  k8s.py  manifest_store.py  mlflow_client.py  model_registry.py  notify.py  rate_limit.py  search.py  user_handle.py  validator.py
backend/migrations/: env.py
backend/migrations/versions/: 0f90705ae22b_job_active_deadline_seconds.py  12f13a2e3d68_phase_11c_drop_v0_schema_columns.py  1afdf61e18f9_add_maldet_version_to_detector_version.py  268e0765531f_phase_model_namespace_and_visibility.py  74c95d81f74e_phase_11b_events_manifest.py  8871984f6fda_phase6_priority_and_queued_backend_.py  8a1c2d4e5f60_phase8_gpu2_profile.py  90125ce5ad35_add_audit_log_table.py  a4b8e7c91d52_phase12_3_role_enum_lowercase.py  b2e7c8a1f330_phase10_sso_admin_email.py  c7e3a9b1d042_phase12_1_service_token_friendly_name.py  d3f179666394_phase7_5_baseline.py  d8928ee4a13d_drop_fastapi_users_user_columns.py  f1e8115c3234_gpu1_resource_profile.py  f37230063a20_phase13b_job_user_params_column.py  f91615e44fad_phase13a_detector_version_deleted_enum.py  f9a2c4e8b01a_phase12_2_role_service_token.py
backend/tests/: conftest.py  test_admin.py  test_audit_log.py  test_auth.py  test_auth_cookie.py  test_body_size_middleware.py  test_builds.py  test_cf_access.py  test_config_validation.py  test_credentials.py  test_csrf_middleware.py  test_datasets.py  test_deadmans_switch_check.py  test_detectors.py  test_experiments_proxy.py  test_experiments_proxy_stream.py  test_health_rate_limit.py  test_internal.py  test_internal_events.py  test_jobs.py  test_jobs_dispatch_owner_ref.py  test_jobs_events_endpoint.py  test_jobs_events_websocket.py  test_jobs_mlflow_naming.py  test_jobs_model_version_visibility.py  test_jobs_queue_position.py  test_jsonschema_validate_params.py  test_metrics.py  test_migrations_audit_log.py  test_migrations_parity.py  test_migrations_phase12.py  test_mlflow_authz.py  test_models_delete.py  test_models_detector.py  test_models_job_event.py  test_models_list.py  test_models_metadata_patch.py  test_models_owner_transfer.py  test_models_registry.py  test_models_resource_profile_gpu1.py  (+52 more)
backend/tests/contract/: conftest.py
backend/tests/contract/mlflow/: test_mlflow_response_shape.py
backend/tests/contract/openapi/: test_schemathesis_detectors.py  test_schemathesis_jobs.py  test_schemathesis_users_me.py
backend/tests/contract/volcano/: test_vcjob_manifest_kubeconform.py
backend/tests/factories/: dataset_factory.py  detector_factory.py  job_factory.py  user_factory.py
backend/tests/fixtures/: manifests.py  sample_dataset.csv  sample_mlflow_responses.py  valid_maldet_manifest.json
backend/tests/fixtures/invalid_detector_no_pyproject/: detector.py
backend/tests/fixtures/valid_detector/: Dockerfile  detector.py  pyproject.toml
backend/tests/heavy/: conftest.py
backend/tests/heavy/auth/: test_jwks_reflector.py
backend/tests/heavy/mlflow/: test_acl_real_multi_user.py  test_real_mlflow_lifecycle.py
backend/tests/integration/: conftest.py
backend/tests/reconciler/: test_fifo_scheduler.py
backend/tests/services/: conftest.py  test_gpu_signal.py
backend/tests/unit/: test_db.py  test_internal_app.py
docs/: architecture.md  (+10 more)
(+792 files in other folders)
