[project]
name = "lolday-backend"
version = "0.1.0"
description = "Lolday platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pydantic-settings>=2.8.0",
    "redis[hiredis]>=5.2.0",
    "kubernetes>=31.0.0",
    "maldet>=2.0,<3",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "mlflow-skinny>=2.20.0",
    "prometheus-fastapi-instrumentator~=7.0",
    "cachetools>=7.0.5",
    "psycopg2-binary>=2.9.12",
    "jsonschema>=4.20,<5",
    "pyjwt>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "aiosqlite>=0.21.0",
    "respx>=0.21.0",
    "fakeredis>=2.35.1",
    "mypy>=1.20.2",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "no_mock_mlflow: do not apply the MLflow autouse mock",
]
