[project]
name = "lolday-backend"
version = "0.1.0"
description = "Lolday platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pydantic-settings>=2.8.0",
    "redis[hiredis]>=5.2.0",
    "kubernetes>=31.0.0",
    "maldet>=2.0,<3",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "mlflow-skinny>=2.20.0",
    "prometheus-fastapi-instrumentator~=7.0",
    "cachetools>=7.0.5",
    "psycopg2-binary>=2.9.12",
    "jsonschema>=4.20,<5",
    "pyjwt>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "aiosqlite>=0.21.0",
    "respx>=0.21.0",
    "fakeredis>=2.35.1",
    "mypy>=1.20.2",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6,<4",
    "pytest-timeout>=2.3,<3",
    "pytest-randomly>=3.15,<4",
    "pytest-rerunfailures>=14,<15",
    "pytest-split>=0.9,<1",
    "pytest-testmon>=2.1,<3",  # dev-only; CI does not invoke testmon mode
    "freezegun>=1.5,<2",
    "hypothesis>=6.114,<7",
    "schemathesis>=3.36,<5",
    "testcontainers[postgres,minio]>=4.7,<5",
    "mlflow>=2.20,<4",  # for testcontainers real-MLflow tier; <4 to match mlflow-skinny 3.x resolution (cachetools<6 in mlflow 2.x conflicts with project cachetools>=7)
    "polyfactory>=2.18,<3",
    "mutmut>=3,<4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto --dist loadscope --maxfail=10 --durations=20 --strict-markers --timeout=30"
markers = [
    "no_mock_mlflow: do not apply the MLflow autouse mock",
    "heavy: testcontainers slow tier; skipped by default in fast tier (-m 'not heavy')",
    "contract: API or manifest contract test (runs serial)",
    "flaky_tracked: known flaky test; must carry issue=<github-url> kwarg",
]

[tool.mutmut]
# Phase 4 D4.3 — weekly mutation tier. Targets the top-10 high-risk
# modules per spec §1.2 (ranked by 30-day churn × fan-in × postmortem
# involvement). Phase 4 exit gate: ≥60% killed per module; final
# target (Phase 4 spec §7.4): ≥80%.
paths_to_mutate = [
    "app/routers/jobs.py",
    "app/reconciler/jobs.py",
    "app/services/mlflow_client.py",
    "app/reconciler/fifo_scheduler.py",
    "app/services/build.py",
    "app/routers/experiments_proxy.py",
    "app/auth/cf_access.py",
    "app/models/job.py",
    "app/services/gpu_signal.py",
    "app/reconciler/build_finalize.py",
]
tests_dir = ["tests/"]
# Skip heavy testcontainers tests during mutation runs (would take
# hours per module). Also disable xdist (mutmut runs its own workers)
# and rerunfailures (a failed-on-mutant rerun adds latency without
# improving the kill signal).
pytest_add_cli_args = ["-m", "not heavy", "-p", "no:xdist", "-p", "no:rerunfailures"]
