[project]
name = "job-helper"
version = "0.1.0"
description = "Lolday job pod init container helpers"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "mlflow-skinny>=2.20.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0", "respx>=0.21.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["job_helper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
